# exemplar

./: .beman-tidy.yaml  .genignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  copier.yml  lockfile.json  new_project_from_exemplar.py  pull_infra.py  pull_infra.sh  stamp.py  stamp.sh  vcpkg.json
.config/: codespell.ini
.devcontainer/: devcontainer.json
.github/actions/setup-enviornment/: action.yml
.github/workflows/: ci_tests.yml  pre-commit-check.yml  pre-commit-update.yml  reusable-beman-preset-test.yml  vcpkg-release.yml
cmake/: beman-config-file-package.cmake  beman-configure.cmake  beman-utils.cmake  beman.exemplar-config.cmake.in  config-file-package.cmake  cxx-modules-rules.cmake  feature_test.cmake  msvc-toolchain.cmake  package-config-file.cmake.in  prelude.cmake  use-fetch-content.cmake
cmake/test/: CMakeLists.txt  main.cpp  test.bat  test.sh
cookiecutter/: check_cookiecutter.sh  cookiecutter.json
cookiecutter/{{cookiecutter.directory_name}}/.github/workflows/: ci_tests.yml
cookiecutter/{{cookiecutter.directory_name}}/tests/beman/{{cookiecutter.project_name}}/: identity.test.cpp
cookiecutter/{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  vcpkg-configuration.json  vcpkg.json
cookiecutter/{{cookiecutter.project_name}}/.github/workflows/: ci_tests.yml  pre-commit-update.yml  vcpkg-release.yml
cookiecutter/{{cookiecutter.project_name}}/examples/: CMakeLists.txt  identity_direct_usage.cpp
cookiecutter/{{cookiecutter.project_name}}/include/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  config.hpp  identity.hpp  {{cookiecutter.project_name}}.hpp
cookiecutter/{{cookiecutter.project_name}}/port/: portfile.cmake.in  vcpkg.json.in
cookiecutter/{{cookiecutter.project_name}}/src/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  identity.cpp
cookiecutter/{{cookiecutter.project_name}}/tests/: CMakeLists.txt
cookiecutter/{{cookiecutter.project_name}}/tests/beman/{{cookiecutter.project_name}}/: CMakeLists.txt  identity.test.cpp
copier/: check_copier.sh
docs/: howto.md  using_exemplar.md
examples/: CMakeLists.txt  identity_as_default_projection.cpp  identity_direct_usage.cpp  identity_module_usage.cpp
include/beman/exemplar/: CMakeLists.txt  beman.exemplar.cppm  config.hpp  identity.cppm
include/beman/{{project-name}}/: identity.hpp
infra/: .beman_module  .beman_submodule
infra/cmake/: BuildTelemetryConfig.cmake  beman-install-library-config.cmake  beman-install-test.cmake  use-fetch-content.cmake
port/: portfile.cmake.in  vcpkg.json.in
src/beman/exemplar/: CMakeLists.txt
src/beman/{{project-name}}/: CMakeLists.txt  identity.cpp
template/: .copier-answers.yml.jinja  .pre-commit-config.yaml.jinja  CMakePresets.json.jinja  CONTRIBUTING.md.jinja  README.md.jinja  vcpkg.json.jinja
template/.github/workflows/: ci_tests.yml.jinja  pre-commit-update.yml.jinja  vcpkg-release.yml.jinja
template/infra/.github/workflows/: pre-commit.yml.jinja  reusable-beman-create-issue-when-fault.yml.jinja
tests/beman/exemplar/: CMakeLists.txt  identity.test.cpp
tests/beman/{{project-name}}/: CMakeLists.txt  identity.test.cpp
